--- a/batect.yml
+++ b/batect.yml
@@ -83,3 +83,13 @@ tasks:
         GPG_KEY_ID: $GPG_KEY_ID # Run `gpg -K` to get this, take last eight characters
         GPG_KEY_RING: $GPG_KEY_RING # Run `gpg --export-secret-keys "<key user name goes here>" | base64` to get this
         GPG_KEY_PASSPHRASE: $GPG_KEY_PASSPHRASE
+
+  assembleRelease:
+    description: Assemble the files that would be published to a repository.
+    run:
+      container: build-env
+      command: ./gradlew assembleRelease
+      environment:
+        GPG_KEY_ID: $GPG_KEY_ID # Run `gpg -K` to get this, take last eight characters
+        GPG_KEY_RING: $GPG_KEY_RING # Run `gpg --export-secret-keys "<key user name goes here>" | base64` to get this
+        GPG_KEY_PASSPHRASE: $GPG_KEY_PASSPHRASE
