Publish snapshots and releases to OSSRH from CI. (Will fail at the moment.)
This will publish a snapshot build on every master branch build, and
publish a release build when tagged.

This will fail at the moment due to
https://issues.sonatype.org/browse/OSSRH-44907?focusedCommentId=567151&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-567151
not being completed.

--- a/batect.yml
+++ b/batect.yml
@@ -76,7 +76,7 @@ tasks:
     description: Publish a release version of the library to Sonatype's Open Source Software Repository Hosting (OSSRH), which will be synced to Maven Central.
     run:
       container: build-env
-      command: ./gradlew publishMavenJavaPublicationToMavenReleasesRepository
+      command: ./gradlew publishMavenJavaPublicationToMavenReleasesRepository closeAndReleaseRepository
       environment:
         OSSRH_USERNAME: $OSSRH_USERNAME
         OSSRH_PASSWORD: $OSSRH_PASSWORD
