--- a/batect.yml
+++ b/batect.yml
@@ -60,6 +60,12 @@ tasks:
       container: build-env
       command: ./gradlew jacocoTestReport
 
+  benchmark:
+    description: Run the benchmarks.
+    run:
+      container: build-env
+      command: ./gradlew jmh
+
   publishSnapshot:
     description: Publish a snapshot version of the library to Sonatype's Open Source Software Repository Hosting (OSSRH).
     run:
