--- a/batect.yml
+++ b/batect.yml
@@ -60,23 +60,11 @@ tasks:
       container: build-env
       command: ./gradlew jacocoTestReport
 
-  publishSnapshot:
-    description: Publish a snapshot version of the library to Sonatype's Open Source Software Repository Hosting (OSSRH).
+  publish:
+    description: Publish the library to Sonatype's Open Source Software Repository Hosting (OSSRH), which will be synced to Maven Central.
     run:
       container: build-env
-      command: ./gradlew publishMavenJavaPublicationToMavenSnapshotsRepository
-      environment:
-        OSSRH_USERNAME: $OSSRH_USERNAME
-        OSSRH_PASSWORD: $OSSRH_PASSWORD
-        GPG_KEY_ID: $GPG_KEY_ID # Run `gpg -K` to get this, take last eight characters
-        GPG_KEY_RING: $GPG_KEY_RING # Run `gpg --export-secret-keys "<key user name goes here>" | base64` to get this
-        GPG_KEY_PASSPHRASE: $GPG_KEY_PASSPHRASE
-
-  publishRelease:
-    description: Publish a release version of the library to Sonatype's Open Source Software Repository Hosting (OSSRH), which will be synced to Maven Central.
-    run:
-      container: build-env
-      command: ./gradlew publishMavenJavaPublicationToMavenReleasesRepository closeAndReleaseRepository
+      command: ./gradlew publishMavenJavaPublicationToSonatypeRepository closeAndReleaseRepository
       environment:
         OSSRH_USERNAME: $OSSRH_USERNAME
         OSSRH_PASSWORD: $OSSRH_PASSWORD
