--- a/batect.yml
+++ b/batect.yml
@@ -60,11 +60,23 @@ tasks:
       container: build-env
       command: ./gradlew jacocoTestReport
 
-  publish:
+  publishRelease:
     description: Publish the library to Sonatype's Open Source Software Repository Hosting (OSSRH), which will be synced to Maven Central.
     run:
       container: build-env
-      command: ./gradlew publishMavenJavaPublicationToSonatypeRepository closeAndReleaseRepository
+      command: ./gradlew publishRelease
+      environment:
+        OSSRH_USERNAME: $OSSRH_USERNAME
+        OSSRH_PASSWORD: $OSSRH_PASSWORD
+        GPG_KEY_ID: $GPG_KEY_ID # Run `gpg -K` to get this, take last eight characters
+        GPG_KEY_RING: $GPG_KEY_RING # Run `gpg --export-secret-keys "<key user name goes here>" | base64` to get this
+        GPG_KEY_PASSPHRASE: $GPG_KEY_PASSPHRASE
+
+  publishSnapshot:
+    description: Publish the library to Sonatype's Open Source Software Repository Hosting (OSSRH), which will be synced to Maven Central.
+    run:
+      container: build-env
+      command: ./gradlew publishSnapshot
       environment:
         OSSRH_USERNAME: $OSSRH_USERNAME
         OSSRH_PASSWORD: $OSSRH_PASSWORD
