Use correct property name.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ kotlin.code.style=official
 
 # See https://github.com/gradle/gradle/issues/11308 for an explanation of this -
 # Nexus doesn't support SHA256 or SHA512 checksums yet and this causes the release to fail.
-org.gradle.internal.publish.checksums.insecure=true
+systemProp.org.gradle.internal.publish.checksums.insecure=true
