--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[*.{yml,yaml}]
+[*.{md,yml,yaml}]
 indent_style = space
 indent_size = 2
 
