Enable auto-merging dependency updates and add label to PRs.

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,8 @@
   ],
   "reviewers": [
     "charleskorn"
-  ]
+  ],
+  "autoMerge": true,
+  "labels": ["is:dependency-update"],
+  "rebaseWhen": "behind-base-branch"
 }
