--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   "reviewers": [
     "charleskorn"
   ],
-  "autoMerge": true,
+  "automerge": true,
   "labels": ["is:dependency-update"],
   "rebaseWhen": "behind-base-branch"
 }
