--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Pipeline
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
       TERM: xterm-256color
       BATECT_CACHE_TYPE: directory
       BATECT_ENABLE_TELEMETRY: true
-      GPG_KEY_ID: 6382A4D7
+      GPG_KEY_ID: 6D76AD03
       OSSRH_USERNAME: charleskorn-travis
 
     steps:
@@ -37,14 +37,25 @@ jobs:
 
       - name: Assemble release
         run: ./batect assembleRelease
+        env:
+          GPG_KEY_RING: ${{ secrets.GPG_KEY_RING }}
+          GPG_KEY_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
         if: github.repository == 'charleskorn/kaml' && github.ref == 'refs/heads/main' && github.event_name == 'push'
 
       - name: Publish snapshot
         run: ./batect publishSnapshot
+        env:
+          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          GPG_KEY_RING: ${{ secrets.GPG_KEY_RING }}
+          GPG_KEY_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
         if: github.repository == 'charleskorn/kaml' && github.ref == 'refs/heads/main' && github.event_name == 'push'
 
       - name: Publish release
         run: ./batect publishRelease
+        env:
+          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          GPG_KEY_RING: ${{ secrets.GPG_KEY_RING }}
+          GPG_KEY_PASSPHRASE: ${{ secrets.GPG_KEY_PASSPHRASE }}
         if: github.repository == 'charleskorn/kaml' && startsWith(github.ref, 'refs/tags/') && github.event_name == 'push'
 
       - name: Create GitHub release
