Don't update Docker image digests.
They shouldn't change, and if they do, a human should be involved.

--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,6 @@
   ],
   "automerge": true,
   "labels": ["is:dependency-update"],
-  "rebaseWhen": "behind-base-branch"
+  "rebaseWhen": "behind-base-branch",
+  "digest": { "enabled": "false" }
 }
