--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
       GPG_KEY_ID: 6D76AD03
       OSSRH_USERNAME: kaml-github-actions
 
+    permissions:
+      contents: write # Required to be able to publish releases, see https://docs.github.com/en/rest/reference/permissions-required-for-github-apps#permission-on-contents
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2.3.4
