Enable major Docker image updates and disable Renovate's dependency dashboard.

--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,11 @@
 {
   "extends": [
     "config:base",
+    "docker:enableMajor",
     ":prHourlyLimitNone",
     ":prConcurrentLimitNone",
-    ":switchToGradleLite"
+    ":switchToGradleLite",
+    ":disableDependencyDashboard",
   ],
   "reviewers": [
     "charleskorn"
