--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/setup-java@v3.12.0
         with:
           java-version: 18
+          distribution: temurin
 
       - name: Cache Gradle
         id: cache-gradle
