--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     name: "Build, Test and Publish"
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     env:
       TERM: xterm-256color
       GPG_KEY_ID: 6D76AD03 # Run `gpg -K` to get this, take last eight characters
