--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,39 +2,61 @@ name: Pipeline
 
 on: [push, pull_request]
 
+env:
+  GRADLE_OPTS: "-Dorg.gradle.internal.launcher.welcomeMessageEnabled=false"
+
 jobs:
-  test-linux:
-    uses: ./.github/workflows/test-target.yml
-    with:
-      runs-on: ubuntu-latest
-      tasks: check # all linux targets + JVM + JS + WasmJS
-  test-windows:
-    uses: ./.github/workflows/test-target.yml
-    with:
-      runs-on: windows-latest
-      tasks: mingwX64Test
-  test-macosX64:
-    uses: ./.github/workflows/test-target.yml
-    with:
-      runs-on: macos-13 # latest version with X64 processor
-      tasks: macosX64Test iosX64Test
-  test-macosArm64:
-    uses: ./.github/workflows/test-target.yml
-    with:
-      runs-on: macos-latest
-      tasks: macosArm64Test iosSimulatorArm64Test
+  test-matrix:
+    strategy:
+      matrix:
+        os: [ 'ubuntu-latest', 'windows-latest', 'macos-13', 'macos-latest' ]
+        include:
+          - os: ubuntu-latest
+            tasks: check
+          - os: windows-latest
+            tasks: mingwX64Test
+          - os: macos-13
+            tasks: macosX64Test iosX64Test
+          - os: macos-latest
+            tasks: macosArm64Test iosSimulatorArm64Test
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4.1.7
+        with:
+          fetch-depth: 0
+
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v3.4.2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3.4.2
+
+      - name: Cache konan dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-gradle-${{ hashFiles('*.gradle.kts') }}
+          restore-keys: |
+              ${{ runner.os }}-gradle-
+
+      - name: Build
+        run: ./gradlew ${{ matrix.tasks }}
+
   publish:
     name: "Build and Publish"
     needs:
-      - test-linux
-      - test-windows
-      - test-macosX64
-      - test-macosArm64
+      - test-matrix
     runs-on: macos-latest
     env:
       TERM: xterm-256color
       GPG_KEY_ID: 6D76AD03 # Run `gpg -K` to get this, take last eight characters
-      GRADLE_OPTS: "-Dorg.gradle.internal.launcher.welcomeMessageEnabled=false"
 
     permissions:
       contents: write # Required to be able to publish releases, see https://docs.github.com/en/rest/reference/permissions-required-for-github-apps#permission-on-contents
