--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ jobs:
   test-matrix:
     strategy:
       matrix:
-        os: [ 'ubuntu-latest', 'windows-latest', 'macos-13', 'macos-latest' ]
         include:
           - os: ubuntu-latest
             tasks: check
@@ -20,6 +19,7 @@ jobs:
           - os: macos-latest
             tasks: macosArm64Test iosSimulatorArm64Test
     runs-on: ${{ matrix.os }}
+    name: Test on ${{ matrix.os }}
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.7
