Don't cancel CI workflow after first job fails

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ concurrency:
 jobs:
   test-matrix:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
