chore: don't change automatically created release to draft
[skip release]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,7 +147,7 @@ jobs:
           tag_name: ${{ steps.get_tag.outputs.tag }}
           files: build/release/*
           fail_on_unmatched_files: true
-          draft: true # Update draft release with matching tag, if there is one.
+          draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: github.repository == 'charleskorn/kaml' && github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.get_tag.outputs.skip != 'true'
