chore: don't create release for Gradle upgrades
[skip release]

--- a/renovate.json
+++ b/renovate.json
@@ -77,7 +77,8 @@
     },
     {
       "matchManagers": [
-        "github-actions"
+        "github-actions",
+        "gradle-wrapper"
       ],
       "semanticCommitScope": "internal"
     }
