--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,9 +118,16 @@ jobs:
       - name: Get tag
         id: get_tag
         run: |
+          echo "Local changes, if any:"
+          git status
+
           if git describe --tags --abbrev=0 --exact-match >/dev/null; then
-            echo "tag=$(git describe --tags --abbrev=0 --exact-match)" >> $GITHUB_OUTPUT
+            tag=$(git describe --tags --abbrev=0 --exact-match)
+            echo "Found tag $tag."
+            echo "tag=$tag" >> $GITHUB_OUTPUT
           else
+            echo "git describe failed, skipping release:"
+            git describe --tags --abbrev=0 --exact-match
             echo "skip=true" >> $GITHUB_OUTPUT
           fi
         if: github.repository == 'charleskorn/kaml' && github.ref == 'refs/heads/main' && github.event_name == 'push'
