chore: group Kotest updates together
[skip release]

--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,8 @@
     {
       "groupName": "Kotest",
       "matchPackagePatterns": [
-        "^io\\.kotest:"
+        "^io\\.kotest:",
+        "^io\\.kotest\\."
       ],
       "matchDatasources": [
         "maven"
